--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
 
 body{
     background-color: #0D0D0D;
-}
+    min-height: 100vh;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    }
 
 section{
     display: flex;
